manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: argo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: rajveer188/argo-backend
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: argo
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5000
